chore: initial layout and image manipulation

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,46 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="test">
-    <h1>Sleight of Hand</h1>
-    <p>Whenever you attempt an act of legerdemain or manual trickery, such as planting something on someone else or concealing an object on your person, make a Dexterity (Sleight of Hand) check. The GM might also call for a Dexterity (Sleight of Hand) check to determine whether you can lift a coin purse off another person or slip something out of another person's pocket.</p>
-  </div>
+    <div class="features">
+      <div class="features__skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>Acrobatics <span class="mod">(Dex)</span></li>
+          <li>Animal Handling <span class="mod">(Wis)</span></li>
+          <li>Arcana <span class="mod">(Int)</span></li>
+          <li>Athletics <span class="mod">(Str)</span></li>
+          <li>Deception <span class="mod">(Cha)</span></li>
+          <li>History <span class="mod">(Int)</span></li>
+          <li>Insight <span class="mod">(Wis)</span></li>
+          <li>Intimidation <span class="mod">(Cha)</span></li>
+          <li>Investigation <span class="mod">(Int)</span></li>
+          <li>Medicine <span class="mod">(Wis)</span></li>
+          <li>Nature <span class="mod">(Int)</span></li>
+          <li>Perception <span class="mod">(Wis)</span></li>
+          <li>Performance <span class="mod">(Cha)</span></li>
+          <li>Persuasion <span class="mod">(Cha)</span></li>
+          <li>Religion <span class="mod">(Int)</span></li>
+          <li>Sleight of Hand <span class="mod">(Dex)</span></li>
+          <li>Stealth <span class="mod">(Dex)</span></li>
+          <li>Survival <span class="mod">(Wis)</span></li>
+        </ul>
+      </div>
+
+      <div class="features__desc">
+        <h1>Sleight of Hand</h1>
+        <p>Whenever you attempt an act of legerdemain or manual trickery, such as planting something on someone else or concealing an object on your person, make a Dexterity (Sleight of Hand) check. The GM might also call for a Dexterity (Sleight of Hand) check to determine whether you can lift a coin purse off another person or slip something out of another person's pocket.</p>
+      </div>
+
+      <div class="features__tabs">
+        <ul>
+          <li>Actions</li>
+          <li>Inventory</li>
+          <li>Features</li>
+          <li>Spellbook</li>
+          <li>Effects</li>
+          <li>Biography</li>
+        </ul>
+      </div>
+    </div>
 </body>
 </html>
