chore: start to add a list of spells

--- a/src/index.html
+++ b/src/index.html
@@ -35,16 +35,41 @@
     </div>
 
     <div class="features__desc">
-      <h2><span class="identifier">1</span>Sleight of Hand</h2>
-      <p>Whenever you attempt an act of legerdemain or manual trickery, such as planting something on someone else or concealing an object on your person, make a Dexterity (Sleight of Hand) check. The GM might also call for a Dexterity (Sleight of Hand) check to determine whether you can lift a coin purse off another person or slip something out of another person's pocket.</p>
+      <h2><span class="identifier">C</span>Cantrips</h2>
+      <ul class="item-list">
+        <li>
+          <div class="icon"></div>
+          <div class="name">Light</div>
+        </li>
+        <li>
+          <div class="icon"></div>
+          <div class="name">Guidance</div>
+        </li>
+        <li>
+          <div class="icon"></div>
+          <div class="name">Spare the Dying</div>
+        </li>
+      </ul>
+
+      <h2><span class="identifier">1</span>1st Level</h2>
+      <ul class="item-list">
+        <li>
+          <div class="icon"></div>
+          <div class="name">Detect Magic</div>
+        </li>
+        <li>
+          <div class="icon"></div>
+          <div class="name">Protection from Evil and Good</div>
+        </li>
+      </ul>
     </div>
 
     <ul class="features__tabs">
       <li><a>Actions</a></li>
       <li><a>Inventory</a></li>
       <li><a>Features</a></li>
-      <li><a>Spellbook</a></li>
-      <li class="active"><a>Effects</a></li>
+      <li class="active"><a>Spellbook</a></li>
+      <li><a>Effects</a></li>
       <li><a>Biography</a></li>
     </ul>
   </div>
