chore: wrapped up skills UI
Closes #1

--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,100 @@
     <div class="features__skills">
       <h2>Skills</h2>
       <ul>
-        <li>Acrobatics <span class="mod">(Dex)</span></li>
-        <li>Animal Handling <span class="mod">(Wis)</span></li>
-        <li>Arcana <span class="mod">(Int)</span></li>
-        <li>Athletics <span class="mod">(Str)</span></li>
-        <li>Deception <span class="mod">(Cha)</span></li>
-        <li>History <span class="mod">(Int)</span></li>
-        <li>Insight <span class="mod">(Wis)</span></li>
-        <li>Intimidation <span class="mod">(Cha)</span></li>
-        <li>Investigation <span class="mod">(Int)</span></li>
-        <li>Medicine <span class="mod">(Wis)</span></li>
-        <li>Nature <span class="mod">(Int)</span></li>
-        <li>Perception <span class="mod">(Wis)</span></li>
-        <li>Performance <span class="mod">(Cha)</span></li>
-        <li>Persuasion <span class="mod">(Cha)</span></li>
-        <li>Religion <span class="mod">(Int)</span></li>
-        <li>Sleight of Hand <span class="mod">(Dex)</span></li>
-        <li>Stealth <span class="mod">(Dex)</span></li>
-        <li>Survival <span class="mod">(Wis)</span></li>
+        <li>
+          <span class="mod">Dex</span>
+          <span class="name">Acrobatics</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Wis</span>
+          <span class="name">Animal Handling</span>
+          <span class="num">+5</span>
+        </li>
+        <li>
+          <span class="mod">Int</span>
+          <span class="name">Arcana</span>
+          <span class="prof">&malt;</span>
+          <span class="num">+8</span>
+        </li>
+        <li>
+          <span class="mod">Str</span>
+          <span class="name">Athletics</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Cha</span>
+          <span class="name">Deception</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Int</span>
+          <span class="name">History</span>
+          <span class="prof">&malt;</span>
+          <span class="num">+8</span>
+        </li>
+        <li>
+          <span class="mod">Wis</span>
+          <span class="name">Insight</span>
+          <span class="num">+5</span>
+        </li>
+        <li>
+          <span class="mod">Cha</span>
+          <span class="name">Intimidation</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Int</span>
+          <span class="name">Investigation</span>
+          <span class="num">+4</span>
+        </li>
+        <li>
+          <span class="mod">Wis</span>
+          <span class="name">Medicine</span>
+          <span class="prof">&malt;</span>
+          <span class="num">+9</span>
+        </li>
+        <li>
+          <span class="mod">Int</span>
+          <span class="name">Nature</span>
+          <span class="num">+4</span>
+        </li>
+        <li>
+          <span class="mod">Wis</span>
+          <span class="name">Perception</span>
+          <span class="num">+5</span>
+        </li>
+        <li>
+          <span class="mod">Cha</span>
+          <span class="name">Performance</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Cha</span>
+          <span class="name">Persuasion</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Int</span>
+          <span class="name">Religion</span>
+          <span class="prof">&malt;</span>
+          <span class="num">+8</span>
+        </li>
+        <li>
+          <span class="mod">Dex</span>
+          <span class="name">Sleight of Hand</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Dex</span>
+          <span class="name">Stealth</span>
+          <span class="num">+0</span>
+        </li>
+        <li>
+          <span class="mod">Wis</span>
+          <span class="name">Survival</span>
+          <span class="num">+5</span>
+        </li>
       </ul>
     </div>
 
