--- a/src/index.html
+++ b/src/index.html
@@ -114,28 +114,58 @@
       <h2><span class="identifier">C</span>Cantrips</h2>
       <ul class="item-list">
         <li>
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/light-sky-1.jpg');"></div>
           <div class="name">Light</div>
+          <div class="details">
+            <div class="type">V, M</div>
+            <div class="time">1 Action</div>
+            <div class="target">20Feet Sphere</div>
+          </div>
+          <div class="controls">[-] [-]</div>
         </li>
         <li>
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/haste-sky-1.jpg');"></div>
           <div class="name">Guidance</div>
+          <div class="details">
+            <div class="type">V, S, <span class="special">C</span></div>
+            <div class="time">1 Action</div>
+            <div class="target">Touch</div>
+          </div>
+          <div class="controls">[-] [-]</div>
         </li>
         <li>
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/heal-sky-1.jpg');"></div>
           <div class="name">Spare the Dying</div>
+          <div class="details">
+            <div class="type">V, S</div>
+            <div class="time">1 Action</div>
+            <div class="target">Touch</div>
+          </div>
+          <div class="controls">[-] [-]</div>
         </li>
       </ul>
 
       <h2><span class="identifier">1</span>1st Level</h2>
       <ul class="item-list">
         <li>
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/light-blue-2.jpg');"></div>
           <div class="name">Detect Magic</div>
+          <div class="details">
+            <div class="type">V, S, M, <span class="special">C</span>, <span class="special">R</span></div>
+            <div class="time">1 Action <span class="special">P</span></div>
+            <div class="target">30 Feet Sphere</div>
+          </div>
+          <div class="controls">[-] [-]</div>
         </li>
         <li>
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/protect-sky-2.jpg');"></div>
           <div class="name">Protection from Evil and Good</div>
+          <div class="details">
+            <div class="type">V, S, M, <span class="special">C</span></div>
+            <div class="time">1 Action <span class="special">P</span></div>
+            <div class="target">Touch</div>
+          </div>
+          <div class="controls">[-] [-]</div>
         </li>
       </ul>
     </div>
