chore: description and hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,7 @@
     <div class="features__desc">
       <h2><span class="identifier">C</span>Cantrips</h2>
       <ul class="item-list">
+        <!-- <li class="open"> -->
         <li>
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/light-sky-1.jpg');"></div>
           <div class="name">Light</div>
@@ -121,7 +122,10 @@
             <div class="time">1 Action</div>
             <div class="target">20Feet Sphere</div>
           </div>
-          <div class="controls">[-] [-]</div>
+          <div class="controls">[_] [_]</div>
+          <div class="desc">
+            You touch one willing creature. Once before the spell ends, the target can roll a d4 and add the number rolled to one ability check of its choice. It can roll the die before or after making the ability check. The spell then ends.
+          </div>
         </li>
         <li>
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/haste-sky-1.jpg');"></div>
@@ -131,7 +135,7 @@
             <div class="time">1 Action</div>
             <div class="target">Touch</div>
           </div>
-          <div class="controls">[-] [-]</div>
+          <div class="controls">[_] [_]</div>
         </li>
         <li>
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/heal-sky-1.jpg');"></div>
@@ -141,7 +145,7 @@
             <div class="time">1 Action</div>
             <div class="target">Touch</div>
           </div>
-          <div class="controls">[-] [-]</div>
+          <div class="controls">[_] [_]</div>
         </li>
       </ul>
 
@@ -155,7 +159,7 @@
             <div class="time">1 Action <span class="special">P</span></div>
             <div class="target">30 Feet Sphere</div>
           </div>
-          <div class="controls">[-] [-]</div>
+          <div class="controls">[_] [_]</div>
         </li>
         <li>
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/protect-sky-2.jpg');"></div>
@@ -165,7 +169,7 @@
             <div class="time">1 Action <span class="special">P</span></div>
             <div class="target">Touch</div>
           </div>
-          <div class="controls">[-] [-]</div>
+          <div class="controls">[_] [_]</div>
         </li>
       </ul>
     </div>
