chore: call-out symbols TBD

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/haste-sky-1.jpg');"></div>
           <div class="name">Guidance</div>
           <div class="details">
-            <div class="type">V, S, <span class="special">C</span></div>
+            <div class="type">V, S <span class="special">C</span></div>
             <div class="time">1 Action</div>
             <div class="target">Touch</div>
           </div>
@@ -155,7 +155,7 @@
           <div class="icon" style="background-image: url('http://54.147.224.20/systems/dnd5e/icons/spells/light-blue-2.jpg');"></div>
           <div class="name">Detect Magic</div>
           <div class="details">
-            <div class="type">V, S, M, <span class="special">C</span>, <span class="special">R</span></div>
+            <div class="type">V, S, M<span class="special">C</span><span class="special">R</span></div>
             <div class="time">1 Action <span class="special">P</span></div>
             <div class="target">30 Feet Sphere</div>
           </div>
