--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,14 @@
     </div>
 
     <div class="features__desc">
+      <div class="filters">
+        <div class="active">Prepared(19)</div>
+        <div>Ritual</div>
+        <div>Conc.</div>
+        <div>Reaction</div>
+        <div>Bonus</div>
+        <div>Action</div>
+      </div>
       <h2><span class="identifier">C</span>Cantrips</h2>
       <ul class="item-list">
         <!-- <li class="open"> -->
